--- a/formalization/formalization.tex
+++ b/formalization/formalization.tex
@@ -128,6 +128,8 @@
 \begin{document}
 \maketitle
 
+%TODO: linear variables consumed in loop
+
 \section{Introduction}
 
 \rustspec{} is a subset of Rust designed for cryptographic specification. It is the successor of
