Added type dictionnary

--- a/formalization/formalization.tex
+++ b/formalization/formalization.tex
@@ -129,6 +129,8 @@
 \maketitle
 
 %TODO: linear variables consumed in loop
+%TODO: shift have int args
+%TODO: compare binops
 
 \section{Introduction}
 
