Moved work after analysis to retrieve foreign signatures Found a way to tame rustc parameters

--- a/formalization/formalization.tex
+++ b/formalization/formalization.tex
@@ -131,6 +131,7 @@
 %TODO: linear variables consumed in loop
 %TODO: shift have int args
 %TODO: compare binops
+%TODO: propagate the borrow down a tuple pattern
 
 \section{Introduction}
 
