--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -23,4 +23,4 @@ hacspec-lib = { path = "../lib" }
 hacspec-chacha20 = { path = "../examples/hacspec-chacha20" }
 hacspec-poly1305 = { path = "../examples/hacspec-poly1305" }
 hacspec-chacha20poly1305 = { path = "../examples/hacspec-chacha20poly1305" }
-hacspec-ntru-demo = { path = "../examples/hacspec-ntru-demo" }
+hacspec-ntru-prime = { path = "../examples/hacspec-ntru-prime" }
