--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -11,6 +11,7 @@ clap = {version = "~2.33.1", features = ["yaml"]}
 pretty = "0.10.0"
 im = "15.0.0"
 itertools = "0.9.0"
+lazy_static = "1.4.0"
 walkdir = "2.3.1"
 serde_json = "1.0"
 hacspec-sig = { path = "../utils/sig" }
