--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -12,13 +12,14 @@ itertools = "0.9.0"
 lazy_static = "1.4.0"
 walkdir = "2.3.1"
 serde_json = "1.0"
+serde = "1.0"
 hacspec-sig = { path = "../utils/sig" }
 heck = "0.3.1"
 regex = "1.3.9"
+hacspec-lib = { path = "../lib" }
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
-hacspec-lib = { path = "../lib" }
 hacspec-chacha20 = { path = "../examples/hacspec-chacha20" }
 hacspec-poly1305 = { path = "../examples/hacspec-poly1305" }
 hacspec-chacha20poly1305 = { path = "../examples/hacspec-chacha20poly1305" }
