--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cargo-hacspec"
+name = "hacspec"
 version = "0.1.0"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
