--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -4,16 +4,22 @@ version = "0.1.0"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "cargo-hacspec"
+path = "src/bin.rs"
+
+[[bin]]
+name = "hacspec-driver"
+path = "src/main.rs"
 
 [dependencies]
-clap = {version = "~2.33.1", features = ["yaml"]}
 pretty = "0.10.0"
 im = "15.0.0"
 itertools = "0.9.0"
 lazy_static = "1.4.0"
 walkdir = "2.3.1"
 serde_json = "1.0"
+serde = "1.0"
 hacspec-sig = { path = "../utils/sig" }
 heck = "0.3.1"
 regex = "1.3.9"
