--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "hacspec"
-version = "0.2.0"
+version = "0.2.0-beta.1"
 authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/hacspec"
 description = "The hacspec compiler."
-readme = "README.md"
+readme = "Readme.md"
 repository = "https://github.com/hacspec/hacspec"
 
 [[bin]]
@@ -18,6 +18,7 @@ name = "hacspec-driver"
 path = "src/main.rs"
 
 [dependencies]
+hacspec-util = { path = "../utils/util", version = "0.1.0-beta.1" }
 pretty = "0.10.0"
 im = "15.0.0"
 itertools = "0.9.0"
@@ -25,7 +26,6 @@ lazy_static = "1.4.0"
 walkdir = "2.3.1"
 serde_json = "1.0"
 serde = "1.0"
-hacspec-sig = { path = "../utils/sig" }
 heck = "0.3.1"
 regex = "1.3.9"
 
