--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -31,7 +31,7 @@ regex = "1.3.9"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
-
+hacspec-lib = { path = "../lib" }
 
 [package.metadata.rust-analyzer]
 rustc_private=true
