--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -25,9 +25,9 @@ itertools = "0.10.0"
 lazy_static = "1.4.0"
 walkdir = "2.3.1"
 serde_json = "1.0"
-serde = "1.0"
 heck = "0.3.1"
 regex = "1.3.9"
+serde = { version = "1.0.125", features = ["derive"] }
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
