--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -37,6 +37,12 @@ num = "0.4"
 [features]
 dev = [ "backtrace" ]
 
+# pearlite = "0.1.0"
+pearlite-syn = { path = "../../../creusot/pearlite-syn" }
+syn = { version = "*", features = ["full", "extra-traits"] }
+quote = "*"
+proc-macro2 = "*"
+
 [dev-dependencies]
 assert_cmd = "1.0.1"
 
