--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -28,6 +28,8 @@ serde_json = "1.0"
 heck = "0.3.1"
 regex = "1.3.9"
 serde = { version = "1.0.125", features = ["derive"] }
+log = "0.4"
+pretty_env_logger = "0.4"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
