--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -34,8 +34,7 @@ pretty_env_logger = "0.4"
 backtrace = { version = "0.3", optional = true }
 num = "0.4"
 
-# pearlite = "0.1.0"
-pearlite-syn = { path = "../../../creusot/pearlite-syn" }
+pearlite-syn = { git = "https://github.com/xldenis/creusot", branch = "master" }
 syn = { version = "*", features = ["full", "extra-traits"] }
 quote = "*"
 proc-macro2 = "*"
