--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -20,7 +20,7 @@ path = "src/main.rs"
 [dependencies]
 hacspec-util = { path = "../utils/util", version = "0.1.0-beta.1" }
 pretty = "0.10.0"
-im = "~15.0.0"
+im = "~15.1.0"
 itertools = "0.10.0"
 lazy_static = "1.4.0"
 walkdir = "2.3.1"
@@ -30,6 +30,10 @@ regex = "1.3.9"
 serde = { version = "1.0.125", features = ["derive"] }
 log = "0.4"
 pretty_env_logger = "0.4"
+backtrace = { version = "0.3", optional = true }
+
+[features]
+dev = [ "backtrace" ]
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
