--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -32,6 +32,7 @@ serde = { version = "1.0.125", features = ["derive"] }
 log = "0.4"
 pretty_env_logger = "0.4"
 backtrace = { version = "0.3", optional = true }
+num = "0.4"
 
 [features]
 dev = [ "backtrace" ]
