--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -31,6 +31,7 @@ glob = "*"
 serde = { version = "1.0.125", features = ["derive"] }
 log = "0.4"
 pretty_env_logger = "0.4"
+clap = { version = "4.0", features = ["derive"] }
 backtrace = { version = "0.3", optional = true }
 
 [features]
