Get rid of manual `cargo` dependency analysis
Hacspec used to call `cargo` by itself, parse and analyse manifests,
in order to generate the correct flags to give to Rustc.
This implied a lot of complexity in the code (in `main.rs`).
Also, this manual analysis was not precise, and caused issues such as #141.
This commit basically splits Hacspec in two binary:

 - `main.rs` is a `rustc` driver, and nothing else: it expects
   `rustc`-compatible only command line arguments, not
   Hacspec-specific ones. Hacspec-specific arguments are expected in
   the env variable HACSPEC_ARGS. `main.rs` is compiled as the
   executable `hacspec-driver`. The program `hacspec-driver` is not
   supposed to be called by the user, at all.
   `hacspec-driver` is called by the other binary.

 - `cargo-hacspec.rs` is a very thin wrapper around `cargo build`. It
   parses its (Hacspec) arguments (i.e. `--out some-dir -e fst
   somecrate`) using `clap` in the structure `util::Args`, and cooks a
   specific `cargo build` call, with the environment variable
   `RUSTC_WORKSPACE_WRAPPER` set to `hacspec-driver`.  This
   `RUSTC_WORKSPACE_WRAPPER` variable tells `cargo` to use the command
   `RUSTC_WORKSPACE_WRAPPER` (in our case, our driver
   `hacspec-driver`) instead of `rustc` whenever we're compiling a
   crate that belongs to the workspace in stake.

Note this is a quite common approach in the rust ecosystem: see
https://github.com/rust-lang/rust-clippy/blob/master/src/driver.rs for
instance.

The env variable `RUSTC_WORKSPACE_WRAPPER` is documented in the cargo
book here:
https://doc.rust-lang.org/cargo/reference/environment-variables.html.

--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/hacspec/hacspec"
 
 [[bin]]
 name = "cargo-hacspec"
-path = "src/bin.rs"
+path = "src/cargo-hacspec.rs"
 
 [[bin]]
 name = "hacspec-driver"
