--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -34,6 +34,14 @@ pretty_env_logger = "0.4"
 backtrace = { version = "0.3", optional = true }
 num = "0.4"
 
+pearlite-syn = { git = "https://github.com/xldenis/creusot", rev = "ebe88ac51dc9ceba3d18ede3351ccee4c4b121bd" } # branch = "master"
+
+syn = { version = "*", features = ["full", "extra-traits"] }
+quote = "*"
+proc-macro2 = "*"
+
+# thin-vec = { version = "0.2.10" }
+
 [features]
 dev = [ "backtrace" ]
 
